# IBS

./: .gitignore  README.md  pyproject.toml  pytest.ini
model/api/schemas/: schema.py
model/api/versions/: base_api.py  reqres_resources.py  reqres_users.py
model/ui/pages/: base_page.py  main_page.py
model/utils/: attach.py
tests/: conftest.py
tests/api_tests/: tests_reqres_resource.py  tests_reqres_users.py
tests/combined_tests/: tests_combined.py
tests/ui_tests/: test_ui.py
